# crud-rs

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  models.rs
